--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
         <div class="main">
 			<h1 class="page-title">About Me</h1>
 			<p>
-                <img class="headshot" src="./assets/images/headshot.jpg" alt="Photo of Reece Raethke">
-                Paragraph 1
+                <img class="reece-pic" src="./assets/reece.jpg" alt="Photo of Reece Raethke">
 			</p>
 			<p>
-                Paragraph 2
+                My name is Reece Raethke. I am just starting my career in the tech industry. My previous work experience is in the health and fitness field so this is an exciting new adventure for me! I look forward to learning as much as I can in the next 6 months!
 			</p>
 			<p>
-                Paragraph 3
+                I plan to continually update this page as my skills improve, so be sure to check back for updates as I continue my education!
             </p>
             
 		</div>		
